# derug-program

./: .gitignore  .solitarc.js  Anchor.toml  drgnPyduLEuNqAcsSRfhYDndd9qUSLfHUZdwDxzAXF4.json  package-lock.json  package.json
.crates/: .crates2.json
programs/derug-program/: Cargo.toml
programs/derug-program/src/: constants.rs  errors.rs  lib.rs  utilities.rs
programs/derug-program/src/instructions/: cancel_derug_request.rs  claim_victory.rs  create_or_update_derug_request.rs  create_or_update_suggestion.rs  init_candy_machine.rs  init_private_mint.rs  init_public_mint.rs  initialize_derug.rs  initialize_reminting.rs  mod.rs  remint_nft.rs  update_verify_collection.rs  vote.rs
programs/derug-program/src/instructions/admin/: bypass_voting.rs  close_program_account.rs  close_remint_config.rs  close_single_request.rs  freeze_nft.rs  mod.rs  skip_vote.rs
programs/derug-program/src/state/: derug_data.rs  derug_request.rs  mod.rs  vote_record.rs
tests/: bypassVoting.ts  closeAccounts.ts  closeDerugData.ts  closeRemintConfig.ts  closeRequest.ts  derug-program.ts  freezeNft.ts  helpers.ts
wallets/: devnet.json
