[package]
name = "derug-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "derug_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl =  "0.26.0"
solana-program = "1.14.11"
itertools = "0.10.5"
spl-token = "3.5.0"
mpl-token-metadata = { version = "1.8.4", features = ["no-entrypoint"] }
